Made a friendship test

--- a/friendship-quiz.html
+++ b/friendship-quiz.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1> Friendship Quiz! </h1>
+    <h4> (See how well you know your friends) </h4>
     <p id="question"></p> <!-- randomly generated question prints here-->
 
   <div class="answers">
@@ -27,3 +28,4 @@
   <p id="result"></p> <!-- print out quiz result here-->
   </body>
 </html>
+<img id="picture" src="http://24.media.tumblr.com/ea80df4dc31be0f8d4e99f89dbc5077b/tumblr_mt5g2aMV2W1scubn7o1_250.gif" alt="bunnygirl">
